@@ -14,6 +14,8 @@
   - Added bulk method to Mango::Collection.
   - Added write_error method to Mango::Protocol.
   - Added bson_raw function to Mango::BSON.
+  - Improved aggregate method in Mango::Collection to always return a cursor
+    or collection.
   - Improved connection management with wire protocol version check.
   - Improved Mango::BSON performance.
   - Improved command performance.
